<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80per"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black_19"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/trans_half_trans_bg_selector"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/trans_half_trans_bg_selector"
            android:text="@string/hide"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/trans_half_trans_bg_selector"
            android:text="@string/encrypt"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dir_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />
</LinearLayout>
