<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_28"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/layout_bot"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/layout_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp">

            <Button
                android:id="@+id/btn_selectDir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/trans_half_trans_bg_selector"
                android:gravity="center"
                android:minWidth="90dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/dir_list"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/cur_dir"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_curDirName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/all_videos"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/trans_half_trans_bg_selector"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/trans_half_trans_bg_selector"
                android:text="@string/encrypt"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ib_edit"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/trans_half_trans_bg_selector"
            android:scaleType="center"
            android:src="@drawable/ic_edit" />

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/media_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:scrollbarSize="3dp"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <com.buyoute.filemanager.widget.DirLayout
        android:id="@+id/dir_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:visibility="gone" />
</RelativeLayout>