<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_28"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_bot"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_selectDir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/trans_half_trans_bg_selector"
            android:gravity="center"
            android:minWidth="90dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dir_list"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/cur_dir"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_curDirName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="4dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/all_videos"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/media_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:scrollbarSize="3dp"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.GridLayoutManager"
        app:spanCount="3" />

    <com.buyoute.filemanager.widget.DirLayout
        android:id="@+id/dir_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:visibility="gone" />
</RelativeLayout>